@@ -5,12 +5,9 @@ Summary: The core Reahl development tools.
 Home-page: http://www.reahl.org
 Maintainer: Iwan Vosloo
 Maintainer-email: iwan@reahl.org
-License: UNKNOWN
-Platform: UNKNOWN
 License-File: LICENSE
 License-File: COPYING
 
 Reahl is a web application framework that allows a Python programmer to work in terms of useful abstractions - using a single programming language.
 
 Reahl-dev is the component containing general Reahl development tools. 
-
